calico_versioned_docs/version-3.24/getting-started/kubernetes/windows-calico/quickstart.mdx
---
description: Install Calico for Windows on a Kubernetes cluster for testing or development.
---

import variables from '@site/calico_versioned_docs/version-3.24/variables';
import CodeBlock from '@theme/CodeBlock';

# Quickstart

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Big picture

Install {variables.prodnameWindows} on your Kubernetes cluster in approximately 5 minutes.

## Concepts

{variables.prodnameWindows} is a hybrid implementation that requires a Linux cluster for {variables.prodname} components and Linux workloads, and Windows nodes for Windows workloads.

## Before you begin

Review the [Linux requirements](../requirements.mdx) and the [{variables.prodnameWindows} requirements](kubernetes/requirements.mdx).

Before beginning the quickstart, setup a {variables.prodname} cluster on Linux nodes and provision Windows machines.

## How to

- [Configure strict affinity for clusters using {variables.prodname} networking](#configure-strict-affinity-for-clusters-using-calico-networking)
- [Install {variables.prodnameWindows} manually](#install-calico-for-windows-manually)
- [Install {variables.prodnameWindows} using HostProcess containers](#install-calico-for-windows-using-hostprocess-containers)
- [Configure installation parameters](#configure-installation-parameters)

### Configure strict affinity for clusters using {variables.prodname} networking

For Linux control nodes using {variables.prodname} networking, strict affinity must be set to `true`.
This is required to prevent Linux nodes from borrowing IP addresses from Windows nodes:

```bash
kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strictAffinity": true}}'
```

:::note

If the above command failed to find ipamconfigurations resource, you need to install Calico API server. Please refer to [installing the Calico API server](../../../operations/install-apiserver.mdx).

:::

### Install {variables.prodnameWindows} manually

The following steps install a Kubernetes cluster on a single Windows node with a Linux control node.

- **Kubernetes VXLAN**

  The geeky details of what you get by default:

  <GeekDetails
    prodname='{variables.prodname}'
    details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:VXLAN,Routing:Calico,Datastore:Kubernetes'
  />

- **Kubernetes BGP**

  The geeky details of what you get by default:

  <GeekDetails
    prodname='{variables.prodname}'
    details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:No,Routing:BGP,Datastore:Kubernetes'
  />

- **EKS**

  The geeky details of what you get by default:

  <GeekDetails
    prodname='{variables.prodname}'
    details='Policy:Calico,IPAM:AWS,CNI:AWS,Overlay:No,Routing:VPC Native,Datastore:Kubernetes'
  />

- **AKS**

  The geeky details of what you get by default:

  <GeekDetails
    prodname='{variables.prodname}'
    details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:No,Routing:VPC Native,Datastore:Kubernetes'
  />

<Tabs>
<TabItem label="Kubernetes VXLAN" value="Kubernetes VXLAN-0">

1. Ensure that BGP is disabled since you're using VXLAN.
   If you installed Calico using operator, you can do this by:

   ```bash
   kubectl patch installation default --type=merge -p '{"spec": {"calicoNetwork": {"bgp": "Disabled"}}}'
   ```

   If you installed Calico using the manifest then BGP is already disabled.

1. Prepare the directory for Kubernetes files on Windows node.

   ```powershell
   mkdir c:\k
   ```

1. Copy the Kubernetes kubeconfig file from the control plane node (default, Location $HOME/.kube/config), to **c:\k\config**.

1. Download the PowerShell script, **install-calico-windows.ps1**.

   <CodeBlock language='powershell'>
   Invoke-WebRequest {variables.calicoReleasesURL}/{variables.releaseTitle}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
   </CodeBlock>

1. Install {variables.prodnameWindows} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
   The PowerShell script downloads {variables.prodnameWindows} release binary, Kubernetes binaries, Windows utilities files, configures {variables.prodnameWindows}, and starts the Calico service.

   **Kubernetes datastore (default)**

   ```powershell
   c:\install-calico-windows.ps1 -KubeVersion <your Kubernetes version (e.g. 1.18.6)> `
                                 -ServiceCidr <your service cidr (default 10.96.0.0/12)> `
                                 -DNSServerIPs <your DNS service IP (default 10.96.0.10)>
   ```

   **etcd datastore**

   ```powershell
   c:\install-calico-windows.ps1 -KubeVersion <your Kubernetes version (e.g. 1.18.6)> `
                                 -Datastore etcdv3 `
                                 -EtcdEndpoints <your etcd endpoint ip> `
                                 -EtcdTlsSecretName <your etcd TLS secret name in calico-system namespace> (default no etcd TLS secret is used) `
                                 -EtcdKey <path to key file> (default not using TLS) `
                                 -EtcdCert <path to cert file> (default not using TLS) `
                                 -EtcdCaCert <path to ca cert file> (default not using TLS) `
                                 -ServiceCidr <your service cidr (default 10.96.0.0/12)> `
                                 -DNSServerIPs <your DNS server IPs (default 10.96.0.10)>
   ```

   :::note

    - You do not need to pass a parameter if the default value of the parameter is correct for your cluster.
    - If your Windows nodes have multiple network adapters, you can configure the one used for VXLAN by editing `VXLAN_ADAPTER` in `{variables.rootDirWindows}\config.ps1`, then restarting {variables.prodnameWindows}.

   :::

1. Verify that the {variables.prodname} services are running.

   ```powershell
   Get-Service -Name CalicoNode
   Get-Service -Name CalicoFelix
   ```

1. Install and start kubelet/kube-proxy service. Execute following PowerShell script/commands.

   ```powershell
   {variables.rootDirWindows}\kubernetes\install-kube-services.ps1
   Start-Service -Name kubelet
   Start-Service -Name kube-proxy
   ```

1. Verify kubelet/kube-proxy services are running.

   ```powershell
   Get-Service -Name kubelet
   Get-Service -Name kube-proxy
   ```

</TabItem>
<TabItem label="Kubernetes BGP" value="Kubernetes BGP-1">

1. Enable BGP service on Windows node (instead of VXLAN).
   Install the RemoteAccess service using the following Powershell commands:

   ```powershell
   Install-WindowsFeature RemoteAccess
   Install-WindowsFeature RSAT-RemoteAccess-PowerShell
   Install-WindowsFeature Routing
   ```

   Then restart the computer:

   ```powershell
   Restart-Computer -Force
   ```

   before running:

   ```powershell
   Install-RemoteAccess -VpnType RoutingOnly
   ```

   Sometimes the remote access service fails to start automatically after install. To make sure it is running, execute the following command:

   ```powershell
   Start-Service RemoteAccess
   ```

1. Prepare the directory for Kubernetes files on Windows node.

   ```powershell
   mkdir c:\k
   ```

1. Copy the Kubernetes kubeconfig file from the control plane node (default, Location $HOME/.kube/config), to **c:\k\config**.

1. Download the PowerShell script, **install-calico-windows.ps1**.

   <CodeBlock language='powershell'>
   Invoke-WebRequest {variables.calicoReleasesURL}/{variables.releaseTitle}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
   </CodeBlock>

1. Install {variables.prodnameWindows} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
   The PowerShell script downloads {variables.prodnameWindows} release binary, Kubernetes binaries, Windows utilities files, configures {variables.prodnameWindows}, and starts the Calico service.

   You do not need to pass a parameter if the default value of the parameter is correct for your cluster.

   **Kubernetes datastore (default)**

   ```powershell
   c:\install-calico-windows.ps1 -KubeVersion <your Kubernetes version (e.g. 1.18.6)> `
                                 -ServiceCidr <your service cidr (default 10.96.0.0/12)> `
                                 -DNSServerIPs <your DNS service IP (default 10.96.0.10)>
   ```

   **etcd datastore**

   ```powershell
   c:\install-calico-windows.ps1 -KubeVersion <your Kubernetes version (e.g. 1.18.6)> `
                                 -Datastore etcdv3 `
                                 -EtcdEndpoints <your etcd endpoint ip> `
                                 -EtcdTlsSecretName <your etcd TLS secret name in calico-system namespace> (default no etcd TLS secret is used) `
                                 -EtcdKey <path to key file> (default not using TLS) `
                                 -EtcdCert <path to cert file> (default not using TLS) `
                                 -EtcdCaCert <path to ca cert file> (default not using TLS) `
                                 -ServiceCidr <your service cidr (default 10.96.0.0/12)> `
                                 -DNSServerIPs <your DNS server IPs (default 10.96.0.10)>
   ```

   :::note

   You do not need to pass a parameter if the default value of the parameter is correct for your cluster.

   :::

1. Verify that the {variables.prodname} services are running.

   ```powershell
   Get-Service -Name CalicoNode
   Get-Service -Name CalicoFelix
   ```

1. Install and start kubelet/kube-proxy service. Execute following PowerShell script/commands.

   ```powershell
   {variables.rootDirWindows}\kubernetes\install-kube-services.ps1
   Start-Service -Name kubelet
   Start-Service -Name kube-proxy
   ```

1. Verify kubelet/kube-proxy services are running.

   ```powershell
   Get-Service -Name kubelet
   Get-Service -Name kube-proxy
   ```

</TabItem>
<TabItem label="EKS" value="EKS-2">

1. Ensure that a Windows instance role has permissions to get `namespaces` and to get `secrets` in the calico-system namespace (or kube-system namespace if you are using a non operator-managed {variables.prodname} installation.)
   One way to do this is by running the following commands to install the required permissions temporarily. Before running the commands, replace `<eks_node_name>` with the Kubernetes node name of the EKS Windows node, for example `ip-192-168-42-34.us-west-2.compute.internal`.
   :::note

   If you are using a non operator-managed {variables.prodname} installation, replace the namespace `calico-system` with `kube-system` in the commands below.

   :::

   ```bash
   kubectl create clusterrole calico-install-ns --verb=get --resource=namespace
   kubectl create clusterrolebinding calico-install-ns --clusterrole=calico-install-ns --user=system:node:<eks_node_name>
   kubectl create role calico-install-token --verb=get,list --resource=secrets --namespace calico-system
   kubectl create rolebinding calico-install-token --role=calico-install-token --user=system:node:<eks_node_name> --namespace calico-system
   ```

1. Prepare the directory for Kubernetes files on the Windows node.

   ```powershell
   mkdir c:\k
   ```

1. [Install kubectl](https://docs.aws.amazon.com/eks/latest/userguide/install-kubectl.html#windows) and move the kubectl binary to **c:\k**.

1. Download the PowerShell script, **install-calico-windows.ps1**.

   <CodeBlock language='powershell'>
   Invoke-WebRequest {variables.calicoReleasesURL}/{variables.releaseTitle}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
   </CodeBlock>

1. Install {variables.prodnameWindows} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
   The PowerShell script downloads {variables.prodnameWindows} release binary, Kubernetes binaries, Windows utilities files, configures {variables.prodnameWindows}, and starts the Calico service.

   You do not need to pass a parameter if the default value of the parameter is correct for your cluster.

   **Kubernetes datastore (default)**

   ```powershell
   c:\install-calico-windows.ps1 -ServiceCidr <your service cidr (default 10.96.0.0/12)> `
                                 -DNSServerIPs <your DNS service IP (default 10.96.0.10)>
   ```

   **etcd datastore**

   ```powershell
   c:\install-calico-windows.ps1 -Datastore etcdv3 `
                                 -EtcdEndpoints <your etcd endpoint ip> `
                                 -ServiceCidr <your service cidr (default 10.96.0.0/12)> `
                                 -DNSServerIPs <your DNS server IPs (default 10.96.0.10)>
   ```

   :::note

   You do not need to pass a parameter if the default value of the parameter is correct for your cluster.

   :::

1. Verify that the {variables.prodname} services are running.

   ```powershell
   Get-Service -Name CalicoNode
   Get-Service -Name CalicoFelix
   ```

1. Verify kubelet and kube-proxy services are running.

   ```powershell
   Get-Service -Name kubelet
   Get-Service -Name kube-proxy
   ```

1. If you installed temporary RBAC in the first step, remove the permissions by running the following commands.
   :::note

   If you are using a non operator-managed {variables.prodname} installation, replace the namespace `calico-system` with `kube-system` in the commands below.

   :::

   ```bash
   kubectl delete clusterrolebinding calico-install-ns
   kubectl delete clusterrole calico-install-ns
   kubectl delete rolebinding calico-install-token --namespace calico-system
   kubectl delete role calico-install-token --namespace calico-system
   ```

</TabItem>
<TabItem label="AKS" value="AKS-3">

1. Register the `EnableAKSWindowsCalico` feature flag with the following Azure CLI command.

   ```bash
   az feature register --namespace "Microsoft.ContainerService" --name "EnableAKSWindowsCalico"
   ```

1. Wait until the `EnableAKSWindowsCalico` feature flag is registered successfully. Execute following CLI command to get current status of the feature.

   ```bash
   az feature list -o table --query "[?contains(name, 'Microsoft.ContainerService/EnableAKSWindowsCalico')].{Name:name,State:properties.state}"
   ```

   Move to next step if the output from above command matches the following output.

   ```bash
   Name                                               State
   -------------------------------------------------  ----------
   Microsoft.ContainerService/EnableAKSWindowsCalico  Registered
   ```

1. Refresh the registration of the `Microsoft.ContainerService` resource provider. Run the following command.

   ```bash
   az provider register --namespace Microsoft.ContainerService
   ```

1. Create the AKS cluster with these settings: `network-plugin` to `azure`, and `network-policy` to `calico`. For example,

   ```bash
   az group create -n $your-resource-group -l $your-region
   az aks create \
    --resource-group $your-resource-group \
    --name $your-cluster-name \
    --node-count 1 \
    --enable-addons monitoring \
    --windows-admin-username azureuser \
    --windows-admin-password $your-windows-password \
    --kubernetes-version 1.20.2 \
    --vm-set-type VirtualMachineScaleSets \
    --service-principal $your-service-principal \
    --client-secret $your-client-secret \
    --load-balancer-sku standard \
    --node-vm-size Standard_D2s_v3 \
    --network-plugin azure \
    --network-policy calico
   ```

1. Add a Windows node pool. For example,

   ```bash
   az aks nodepool add \
    --resource-group $your-resource-group \
    --cluster-name $your-cluster-name \
    --os-type Windows \
    --name $your-windows-node-pool-name \
    --node-count 1 \
    --kubernetes-version 1.20.2 \
    --node-vm-size Standard_D2s_v3
   ```

</TabItem>
</Tabs>

Congratulations! You now have a Kubernetes cluster with {variables.prodnameWindows} and a Linux control node.

### Install {variables.prodnameWindows} using HostProcess containers

:::note

This installation method is a tech preview and should not be used for production clusters. Upgrades from a tech preview version of this
installation method to the GA version might not be seamless.

:::

With Kubernetes v1.22, a new Windows container type called "HostProcess containers" can run directly on the host with access to the host network namespace,
storage, and devices. With this feature, {variables.prodnameWindows} can now be installed and managed using Kubernetes resources such as Daemonsets and ConfigMaps,
instead of needing to configure and install {variables.prodnameWindows} manually on each node. Using this installation method, the {variables.prodnameWindows}
services are no longer registered on the host. Instead, the services are run directly within HostProcess containers.

#### Requirements

In addition to the [{variables.prodnameWindows} requirements](kubernetes/requirements.mdx),
this installation method has [additional requirements](https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/):

- Kubernetes v1.22+
- HostProcess containers support enabled: for v1.22, HostProcess containers support has to be [enabled](https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/#before-you-begin-version-check). For Kubernetes v1.23+, HostProcess containers are enabled by default.
- ContainerD 1.6.0+
- The Windows nodes have joined the cluster

To install ContainerD on the Windows node and configure the ContainerD service:

```powershell
Invoke-WebRequest {variables.tmpScriptsURL}/scripts/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
c:\Install-Containerd.ps1 -ContainerDVersion 1.6.2 -CNIConfigPath "c:/etc/cni/net.d" -CNIBinPath "c:/opt/cni/bin"
```

If you have an existing {variables.prodnameWindows} installation using the manual method, your Windows nodes may have already joined the cluster.

To join a Windows node to a cluster provisioned with kubeadm:

- Install kubeadm and kubelet binaries and install the kubelet service

```powershell
Invoke-WebRequest {variables.tmpScriptsURL}/scripts/PrepareNode.ps1 -OutFile c:\PrepareNode.ps1
c:\PrepareNode.ps1 -KubernetesVersion v1.23.4 -ContainerRuntime ContainerD
```

- Run kubeadm on a control plane host and copy the join command

```bash
kubeadm token create --print-join-command
```

- Edit the join command by appending `--cri-socket "npipe:////./pipe/containerd-containerd"` and update the kubeadm.exe path to `c:\k\kubeadm.exe`.
  An example join command:

```
c:\k\kubeadm.exe join 172.16.101.139:6443 --token v8w2jt.jmc45acn85dbll1e --discovery-token-ca-cert-hash sha256:d0b7040a704d8deb805ba1f29f56bbc7cea8af6aafa78137a9338a62831739b4 --cri-socket "npipe:////./pipe/containerd-containerd"
```

- Run the join command on the Windows node. Shortly after it completes successfully, the Windows node will appear in `kubectl get nodes`.
  The new node's status will be NotReady since the Calico CNI has not yet been installed.

#### Migrating from {variables.prodnameWindows} installed manually

If your Windows nodes already have {variables.prodnameWindows} installed using the manual installation method, you can continue this quickstart guide
to migrate to a manifest-based installation. This installation process will uninstall any existing {variables.prodnameWindows} services and overwrite the {variables.prodnameWindows} installation files with those included in the `calico/windows` image. If `kubelet` and `kube-proxy` were installed using `{variables.rootDirWindows}\kubernetes\install-kube-services.ps1`, those services will updated in-place and remain installed. If those services were running, they are restarted so those services
will be updated in place and remain installed.

:::note

Before proceeding, take note of the configuration parameters in `{variables.rootDirWindows}\config.ps1`. These configuration parameters will be needed during the install.

:::

#### Install

<Tabs>
<TabItem label="Kubernetes VXLAN" value="Kubernetes VXLAN-4">

<CalicoWindowsInstall networkingType='vxlan' />

</TabItem>
<TabItem label="Kubernetes BGP" value="Kubernetes BGP-5">

<CalicoWindowsInstall networkingType='windows-bgp' />

</TabItem>
</Tabs>

Congratulations! You now have a Kubernetes cluster with {variables.prodnameWindows} and a Linux control node.

### Configure installation parameters

| **Parameter Name** | **Description**                                                                                                                                                                                                                                                                                  | **Default**  |
| ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------ |
| KubeVersion        | Version of Kubernetes binaries to use. If the value is an empty string (default), the {variables.prodnameWindows} installation script does not download Kubernetes binaries and run Kubernetes service. Use the default for managed public cloud.                                                        | ""           |
| DownloadOnly       | Download without installing {variables.prodnameWindows}. Set to `yes` to manually install and configure {variables.prodnameWindows}. For example, {variables.prodnameWindows} the hard way.                                                                                                                              | no           |
| Datastore          | {variables.prodnameWindows} datastore type [`kubernetes` or `etcdv3`] for reading endpoints and policy information.                                                                                                                                                                                      | kubernetes   |
| EtcdEndpoints      | Comma-delimited list of etcd connection endpoints. Example: `http://127.0.0.1:2379,http://127.0.0.2:2379`. Valid only if `Datastore` is set to `etcdv3`.                                                                                                                                         | ""           |
| EtcdTlsSecretName  | Name of a secret in `calico-system` namespace which contains `etcd-key`, `etcd-cert`, `etcd-ca` for automatically configuring TLS. Either use this or parameters `EtcdKey`, `EtcdCert`, `EtcdCaCert` below. Note: If you are not using operator-based installation, use namespace `kube-system`. | ""           |
| EtcdKey            | Path to key file for etcd TLS connection.                                                                                                                                                                                                                                                        | ""           |
| EtcdCert           | Path to certificate file for etcd TLS connection.                                                                                                                                                                                                                                                | ""           |
| EtcdCaCert         | Path to CA certificate file for etcd TLS connection.                                                                                                                                                                                                                                             | ""           |
| ServiceCidr        | Service IP range of the Kubernetes cluster. Not required for most managed Kubernetes clusters. Note: EKS has non-default value.                                                                                                                                                                  | 10.96.0.0/12 |
| DNSServerIPs       | Comma-delimited list of DNS service IPs used by Windows pod. Not required for most managed Kubernetes clusters. Note: EKS has a non-default value.                                                                                                                                               | 10.96.0.10   |
| CalicoBackend      | Calico backend network type (`vxlan` or `bgp`). If the value is an empty string (default), backend network type is auto detected.                                                                                                                                                                | ""           |

## Next steps

You can now use the {variables.prodname} Linux-based docs site for your documentation. Before you continue, review the [Limitations and known issues](limitations.mdx) to understand the features (and sections of documentation) that do not apply to Windows.
